--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,59 +9,59 @@ jobs:
     timeout-minutes: 3600
 
     steps:
-      - name: Update system and install XRDP + Desktop
+      - name: Atualizar sistema e instalar XRDP + XFCE
         run: |
           sudo apt update -y
           sudo DEBIAN_FRONTEND=noninteractive apt install -y xrdp xfce4 xfce4-goodies
           sudo systemctl enable xrdp
           sudo systemctl start xrdp
 
-      - name: Create RDP user with random password
+      - name: Criar usuário RDP com senha fixa
         run: |
           USERNAME="rdpuser"
-          PASSWORD=$(openssl rand -base64 12 | tr -dc 'A-Za-z0-9@#%^&+=' | head -c 16)
-          
-          echo "Creating user $USERNAME..."
-          sudo useradd -m -s /bin/bash "$USERNAME"
+          PASSWORD="442144Mu"
+
+          echo "Criando usuário $USERNAME..."
+          sudo useradd -m -s /bin/bash "$USERNAME" || true
           echo "$USERNAME:$PASSWORD" | sudo chpasswd
-          
+          sudo usermod -aG sudo "$USERNAME"
+
           echo "RDP_USERNAME=$USERNAME" >> $GITHUB_ENV
           echo "RDP_PASSWORD=$PASSWORD" >> $GITHUB_ENV
-          
-          echo "User created successfully with password: $PASSWORD"
+          echo "Usuário $USERNAME criado com senha fixa $PASSWORD"
 
-      - name: Install and connect Tailscale
+      - name: Instalar e conectar ao Tailscale
         run: |
           curl -fsSL https://tailscale.com/install.sh | sh
           sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=ubuntu-rdp-${GITHUB_RUN_ID}
           sleep 10
           TS_IP=$(tailscale ip -4 | head -n 1)
           echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
-          echo "Tailscale connected at $TS_IP"
+          echo "Conectado ao Tailscale com IP $TS_IP"
 
-      - name: Configure XRDP and Firewall
+      - name: Configurar XRDP e sessão XFCE
         run: |
           sudo ufw allow 3389/tcp || true
           echo xfce4-session > ~/.xsession
           sudo systemctl restart xrdp
-          echo "XRDP configured and firewall adjusted."
+          echo "XRDP e XFCE configurados."
 
-      - name: Display connection info
+      - name: Mostrar informações de acesso
         run: |
           echo ""
           echo "=========================================="
-          echo " 🖥️  Ubuntu XRDP via Tailscale is ready!"
+          echo " 🖥️  Ubuntu XRDP via Tailscale está pronto!"
           echo "------------------------------------------"
           echo "  IP Address: $TAILSCALE_IP"
           echo "  Username:   $RDP_USERNAME"
           echo "  Password:   $RDP_PASSWORD"
           echo "------------------------------------------"
-          echo "Use Remote Desktop (RDP) to connect."
-          echo "Select 'Xfce Session' on login."
+          echo " Conecte-se via RDP (porta 3389) usando o IP acima."
+          echo " Selecione a sessão: XFCE Session"
           echo "=========================================="
           echo ""
 
-      - name: Keep session alive
+      - name: Manter sessão ativa
         run: |
-          echo "RDP Session active. Stop the workflow to end the session."
+          echo "Sessão RDP ativa. Pare o workflow para encerrar."
           while true; do sleep 300; done
